# Discord_Localization_Management_Bot

./: .gitignore  bot.py  config_reader.py  constant.py  database_service.py  pyproject.toml  regional_admins.csv  requirement.txt
idea/: data.txt  idea.txt
