[tool.poetry]
name = "discordlocalizationmanagementbot"
version = "0.1.0"
description = ""
authors = ["vkduy19 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
